--- a/project1/style.css
+++ b/project1/style.css
@@ -7,3 +7,13 @@
     width: 500px;
     height: 500px;
 }
+.controls {
+    position: absolute;
+    z-index: 10;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.controls, select, option {
+    font-size: 25px;
+}
