fullScreenButton document.fullscreenElement -returns full screen mode being active or null. .requestFullscreen() -returns a promise -call on the element we want to change to full screen. .exitFullscreen() -switch back to window mode.

--- a/project7-scroller/style.css
+++ b/project7-scroller/style.css
@@ -7,7 +7,6 @@ body {
     background: black;
 }
 #canvas1 {
-    background: blue;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,4 +17,12 @@ body {
 }
 #playerImage, #backgroundImage, #enemyImage {
     display: none;
+}
+#fullScreenButton {
+    position: absolute;
+    font-size: 20px;
+    padding: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
