--- a/project 9-/style.css
+++ b/project 9-/style.css
@@ -12,8 +12,9 @@
     transform: translate(-50%, -50%);
     max-width: 100%;
     max-height: 100%;
+    font-family: "Audiowide", sans-serif;
 }
 
-#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big, #fire, #collisionAnimatio {
+#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big, #fire, #collisionAnimatio, #lives {
     display: none;
 }
